--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="C:\Users\logan\Documents\Coding\Weather-Dashboard\assets\style.css">
+    <link rel="stylesheet" href=".\assets\style.css">
 </head>
 <body>
     <header>Weather Dashboard</header>
@@ -34,7 +34,7 @@
         </div>
         
     </div>
-    <script src="C:\Users\logan\Documents\Coding\Weather-Dashboard\assets\script.js"></script>
+    <script src=".\assets\script.js"></script>
 </body>
 
 </html>
